# CMA-Radar-Parser

./: .gitignore  BatchParse.py  BatchToMergedNc.py  CHANGELOG.md  CLAUDE.md  LICENSE  ParseToRawNc.py  README.md  ReadParseSingleFile.py  pyproject.toml  visualize_radar_nc.py
reader/: __init__.py  cma_reader.py
src/cma_radar/: cli.py
src/cma_radar/export/: netcdf.py  text.py
src/cma_radar/reader/: __init__.py
src/cma_radar/viz/: plot.py
