[project]
name = "cma-radar-parser"
version = "0.2.0"
description = "CMA millimeter-wave cloud radar data parser"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "netCDF4",
    "typer[rich]>=0.12",
    "matplotlib",
    "scipy",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
cma-radar = "cma_radar.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cma_radar"]
